# reportlab-qrcode

./: LICENSE  README.md  setup.cfg
examples/: advanced.py  flow.py  simple.py
reportlab_qrcode/: __init__.py
tests/: test_all.py
