[metadata]
name = reportlab-qrcode
version = 0.1
home-page = https://github.com/hprid/qrcode-reportlab
license = MIT
license-file = LICENSE
author = Henning Pridöhl
author-email = dev@hprid.de
description = Allows to create QR codes for use with the ReportLab PDF library.
long-description = file: README.md
long-description-content-type = text/markdown
platform = any
keywords = qrcode reportlab pdf
classifiers =
  Development Status :: 4 - Beta
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
python_requires = >= 3.6
packages = find:
test_suite = tests
setup_requires = setuptools
install_requires =
  qrcode
  reportlab

[options.extras_require]
testing =
  pytest
  pyzbar
  pillow

[options.packages.find]
exclude =
  tests
  examples

[bdist_wheel]
universal = false

